# whatsapp-analyzer

./: .gitignore  CONTRIBUTING.md  ISSUES.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
data-example/: _chat.txt  _chat0.txt
docs/: data_exploration.md  documentation_en.md  documentation_fr.md
notebooks/: analyse_utilisateurs.ipynb  comparaison_groupes.ipynb  exploration.ipynb
tests/: conftest.py  test_cleaner.py  test_cli.py  test_comparator.py  test_core.py  test_loader.py  test_media_analyzer.py  test_parser.py  test_sentiment_analyzer.py  test_temporal_analyzer.py  test_topic_classifier.py  test_user_analyzer.py  test_utils.py  test_visualizer.py
whatsapp_analyzer/: __init__.py  app.py  cleaner.py  cli.py  comparator.py  core.py  loader.py  media_analyzer.py  parser.py  sentiment_analyzer.py  temporal_analyzer.py  topic_classifier.py  user_analyzer.py  utils.py  visualizer.py
