[project]
name = "whatsapp-analyser"
version = "0.1.0"
description = "WhatsApp package to analyse discussions from a WhatsApp group"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "streamlit>=1.35.0",
    "emoji>=2.15.0",
    "langdetect>=1.0.9",
    "nltk>=3.9.4",
    "jinja2>=3.1.0",
    "matplotlib>=3.8.0",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "rich>=14.3.3",
    "spacy>=3.8.13",
    "vaderSentiment>=3.3.2",
    "transformers>=4.40.0",
]

[project.scripts]
whatsapp-analyser = "whatsapp_analyzer.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["whatsapp_analyzer*"]
